--- a/mnistLib/CMakeLists.txt
+++ b/mnistLib/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
 
 # specify the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 project(MnistNN VERSION 0.0.1 DESCRIPTION "Random MnistGAN library")
@@ -9,8 +9,12 @@ project(MnistNN VERSION 0.0.1 DESCRIPTION "Random MnistGAN library")
 # Bundle library
 add_library(${PROJECT_NAME} STATIC
     src/statpack.cpp
+    src/mnistParser.cpp
 )
 
 # TODO: change to PRIVATE and create public interface ?
 # include headers
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/headers)
+
+# Compile options
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
