Neural network class implementation started

--- a/mnistLib/CMakeLists.txt
+++ b/mnistLib/CMakeLists.txt
@@ -8,8 +8,8 @@ project(MnistNN VERSION 0.0.1 DESCRIPTION "Random MnistGAN library")
 
 # Bundle library
 add_library(${PROJECT_NAME} STATIC
-    src/statpack.cpp
     src/mnistParser.cpp
+    src/ganTrain.cpp
 )
 
 # TODO: change to PRIVATE and create public interface ?
