forward propagation done

--- a/mnistLib/CMakeLists.txt
+++ b/mnistLib/CMakeLists.txt
@@ -9,6 +9,7 @@ project(MnistNN VERSION 0.0.1 DESCRIPTION "Random MnistGAN library")
 # Bundle library
 add_library(${PROJECT_NAME} STATIC
     src/mnistParser.cpp
+    src/statpack.cpp
     src/ganTrain.cpp
 )
 
