--- a/mnistLib/CMakeLists.txt
+++ b/mnistLib/CMakeLists.txt
@@ -9,11 +9,19 @@ project(MnistNN VERSION 0.0.1 DESCRIPTION "Random MnistGAN library")
 # Bundle library
 add_library(${PROJECT_NAME} STATIC
     src/mnistParser.cpp
+    src/NeuralNet.cpp
+)
+
+# Compile options
+target_compile_options(${PROJECT_NAME} PRIVATE
+    -Wall
+    -Wextra
+    -Wpedantic
+    -Werror
+    -Wconversion
+    -O3
 )
 
 # TODO: change to PRIVATE and create public interface ?
 # include headers
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/headers)
-
-# Compile options
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
